--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <input type="text" name="password" value="Type your password">
 
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ in Hyderabad.
   </footer>
 <script src="index.js" charset="utf-8"></script>
 </body>
